--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="overflow-hidden min-h-screen">
-        <nav class="bg-gray-100 h-20 flex justify-between">
+    <div class="min-h-screen bg-white">
+        <nav class="bg-gray-100 h-10 flex justify-between">
             <div class="flex items-center">
                 <img src="Logo.svg" alt="" class="m-2">
             </div>
@@ -35,7 +35,7 @@
             </div>
 
         </nav>
-        <div class="p-4 md:p-20 pb-4">
+        <div class="p-2 md:p-10 pb-4">
             <h3 class="text-5xl md:text-7xl font-black">MONSTERA</h3>
             <P class="mt-2 md:mt-9">Lorem ipsum dolor sit amet consectetur adipiscing elit.<br>Debitis ab veniam
                 adipisci corrupti unde,nostrum saepe.<br>Quibusdam perferendis,dolors est odit iste cum quas quiidem
